--- a/Recipel-recommender-front/package.json
+++ b/Recipel-recommender-front/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "casdoor-vue-sdk": "^1.6.0",
     "vant": "^4.9.17",
     "vue": "^3.5.13",
     "vue-router": "4"
